# intensifyer

./: .gitignore  Dockerfile  LICENSE  README.md  commands.py  compose.yaml  config.py  deploy.sh  docker-compose.yml  facealign.py  health_server.py  intensyfier_bot.py  iostuff.py  pipeline.py  processing.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  start.sh  utils.py
src/intensifyer/: __init__.py  commands.py  config.py  facealign.py  health_server.py  intensifyer_bot.py  iostuff.py  pipeline.py  processing.py  utils.py
